# riichi-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dev  docker-compose-traefik.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml
config/: nginx.conf  settings.py  urls.py  wsgi.py
games/: admin.py  forms.py  models.py  services.py  views.py
games/migrations/: 0001_initial.py  0002_gameresult_created_at.py  0003_avatar_player_avatar.py  0004_avatar_allow_randomize.py  0005_club_alter_game_target_score_alter_game_uma_last_and_more.py  0006_gamehighlight.py  0007_game_is_unranked.py
games/tests/: test_games.py
locale/uk/LC_MESSAGES/: django.mo  django.po
middleware/: tz.py
templates/: base.html  home.html
templates/admin/: base_site.html
templates/games/: _highlights_section.html  birthday_card.html  game_card.html  player_profile.html
